--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,4 +25,5 @@ jobs:
       with:
         name: pedro-test-stack
         template: ./cf/template.yml
+        no-fail-on-empty-changeset: "1"
         # parameter-overrides: "KeyPairName=<key-pair>"
