--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Deploy to AWS CloudFormation
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
-        name: pedro-test-stack
+        name: data-science-server-stack
         template: ./cf/template.yml
         no-fail-on-empty-changeset: "1"
         # parameter-overrides: "KeyPairName=<key-pair>"
